// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducers counter should handle DECREMENT_COUNTER 1`] = `
Object {
  "count1": 0,
  "count2": 0,
}
`;

exports[`reducers counter should handle INCREMENT_COUNTER 1`] = `
Object {
  "count1": 1,
  "count2": 0,
}
`;

exports[`reducers counter should handle initial state 1`] = `
Object {
  "count1": 0,
  "count2": 0,
}
`;

exports[`reducers counter should handle unknown action type 1`] = `
Object {
  "count1": 0,
  "count2": 0,
}
`;
